[package]
name = "wgpu_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.12", features = ["rwh_05"] }
env_logger = "0.11.2"
log = "0.4.21"
wgpu = "0.19.2"
pollster= "0.3.0"
naga_oil = "0.13.0"